Add transfer learning

--- a/notebook/transfer_learning.ipynb
+++ b/notebook/transfer_learning.ipynb
@@ -163,6 +163,43 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img = image.load_img('./1.jpg', target_size=(224, 224) ,grayscale=True)\n",
+    "img.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(224, 224, 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "img = image.img_to_array(img)\n",
+    "print(img.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image.array_to_img(np.concatenate([img, img, img], axis=-1), gra).show()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
