Add batch generators

--- a/notebook/Untitled.ipynb
+++ b/notebook/Untitled.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pickle\n",
@@ -182,7 +184,9 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "xn= np.array(x)"
@@ -306,13 +310,13 @@
     {
      "ename": "TypeError",
      "evalue": "only integer scalar arrays can be converted to a scalar index",
+     "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
       "\u001b[0;32m<ipython-input-95-da270bfbba94>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconcatenate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m5\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m: only integer scalar arrays can be converted to a scalar index"
-     ],
-     "output_type": "error"
+     ]
     }
    ],
    "source": [
@@ -350,14 +354,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading ../../data/source_data/mnist/train_images.p...\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading ../../data/source_data/mnist/train_labels.p...\nLoading ../../data/source_data/mnist/test_images.p...\nLoading ../../data/source_data/mnist/test_labels.p...\n"
+      "Loading ../../data/source_data/mnist/train_images.p...\n",
+      "Loading ../../data/source_data/mnist/train_labels.p...\n",
+      "Loading ../../data/source_data/mnist/test_images.p...\n",
+      "Loading ../../data/source_data/mnist/test_labels.p...\n"
      ]
     }
    ],
@@ -391,8 +391,120 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "a = [[2, 3, 4], [6, 8, 3], [5, 6, 7]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "def gen():\n",
+    "    while True:\n",
+    "        for a_row in a:\n",
+    "            for j in a_row:\n",
+    "                yield j"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "3\n",
+      "4\n",
+      "6\n",
+      "8\n",
+      "3\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "6\n",
+      "8\n",
+      "3\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "gg = gen()\n",
+    "for _ in range(20):\n",
+    "    b = next(gg)\n",
+    "    print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def get_batches_all_x(x, batch_size):\n",
+    "  \"\"\"Split features into batches.\"\"\"\n",
+    "  for start in range(0, len(x), batch_size):\n",
+    "    end = start + batch_size\n",
+    "    yield x[start:end]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "x_ = [1, 2, 3, 4, 5, 6, 7, 8, 9, 0, 2, 3, 4, 56, 5, 2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4]\n",
+      "[5, 6, 7, 8]\n",
+      "[9, 0, 2, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "gen = get_batches_all_x(x_, 4)\n",
+    "for _ in range(3):\n",
+    "    print(next(gen))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
